--- a/manifest/css/main.css
+++ b/manifest/css/main.css
@@ -20,7 +20,7 @@ input {
 button {
   height: 30px;
   width: 70px;
-  background: none; 
+  /* background: none;  */
   color: #313131;
   border: 1px solid #313131;
   border-radius: 50px; 
@@ -41,28 +41,15 @@ form {
 .greeting {
   font-family: sans-serif;
   font-size: 60px;
-  color: #fff;
+  color: rgb(250, 16, 16);
 }
 
 body {
-  background-color: #c670ca;
+  height: auto;
+  background-color: #c670ca; 
   background-image: linear-gradient(45deg, #ffffff 0%, #25a5c8 52%, #3aa757 90%);
 }
 
 html {
   height: 100%;
-}
-
-/* pop up button */
-#change-color {
-  height: 30px;
-  width: 87px !important;
-  /* outline: none; */
-  margin: 10px;
-  border-radius: 14px;
-}
-
-#change-color.current {
-  box-shadow: 0 0 0 2px white,
-              0 0 0 4px black;
 }
